--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Let's Get In Touch!</h2>
+                <h2 class="section-heading">Fale conosco!</h2>
                 <hr class="primary">
-                <p>Pronto para inciar o seu proximo projeto conosco? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                <p>Pronto para inciar o seu proximo projeto conosco? Que bom! Entre em contato pelo nosso telefone, e-mail, nossas rede sociais que retornaremos!</p>
             </div>
         <div class="col-lg-2 col-lg-offset-2 text-center">
             <a href="https://twitter.com/{{ site.twitter_username }}">
