--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,7 @@
                     <a class="page-scroll" href="#about">A empresa</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Servços</a>
+                    <a class="page-scroll" href="#services">Serviços</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#portfolio">Portfolio</a>
