--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -7,10 +7,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Projeto de Nuvem
                             </div>
                             <div class="project-name">
-                                Projeto de Nuvem
+                                Acesso em qualquer lugar e dispositivo
                             </div>
                         </div>
                     </div>
@@ -22,10 +22,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Sistemas Personalizado
                             </div>
                             <div class="project-name">
-                                Project Name
+                              Sistemas feitos para sua necessidade
                             </div>
                         </div>
                     </div>
@@ -37,10 +37,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Segurança
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Seus dados protegidos.
                             </div>
                         </div>
                     </div>
@@ -52,10 +52,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Projeto Complice
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Sua empresa em conformidade com a lei.
                             </div>
                         </div>
                     </div>
@@ -67,10 +67,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Infraestrutura
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Infraestrutura de TI personalizada ao seu orçamento.
                             </div>
                         </div>
                     </div>
@@ -82,10 +82,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Soluções Microsoft
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Projeto e execução do Office365.
                             </div>
                         </div>
                     </div>
